# electro-py

./: .gitignore  pyproject.toml
src/electro_py/: __init__.py
src/electro_py/hypno/: __init__.py  hypno.py  utils.py
src/electro_py/mua/: __init__.py  pipe.py
src/electro_py/plot/: __init__.py  hypno.py  raw.py  spectro.py  utils.py
src/electro_py/sigpro/: __init__.py  gen.py  spectro.py
src/electro_py/tdt/: __init__.py  io.py  utils.py
src/electro_py/util/: __init__.py  videos.py
