[project]
name = "electro-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kort Driessen", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "probeinterface>=0.3.1",
    "pyyaml>=6.0.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "spikeinterface>=0.103.2",
    "tdt>=0.6.8",
    "xarray>=2025.9.0",
]

# Dev-only deps: tools + notebooks.
# uv supports groups; install with: uv sync --group dev
[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build one wheel that contains the import package.
[tool.hatch.build.targets.wheel]
packages = [
  "src/electro_py",
]

# (Optional but nice for source distributions)
[tool.hatch.build.targets.sdist]
include = [
  "src/electro_py/**",
  "README.md",
  "pyproject.toml",
]

# ------------------------------ RUFF (lint + format) ------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

# If you want Ruff to run both linting and formatting in "modern" mode:
# (preview is optional; keep it off if you want fewer surprises)
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# You can add more later (e.g. "N", "SIM", "C4", "RUF", etc.)

[tool.ruff.lint.isort]
known-first-party = ["electro_py"]

[tool.ruff.format]
# Ruff formatter is the Black replacement (no Black config needed).
# Keep default behavior unless you have a reason to tweak.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ------------------------------ TY (type checker + LSP) ------------------------------
[tool.ty]
# You can keep this section minimal; ty will auto-discover a lot.
# Add rules as you start enforcing things.

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Optional: helpful to be explicit in src-layout repos.
root = ["./src"]

# Example: ignore (or warn/error) specific rules if needed:
# [tool.ty.rules]
# possibly-unresolved-reference = "warn"
